@@ -1,0 +1,73 @@
+-- phpMyAdmin SQL Dump
+-- version 5.0.2
+-- https://www.phpmyadmin.net/
+--
+-- Host: 127.0.0.1
+-- Generation Time: May 14, 2020 at 10:09 AM
+-- Server version: 10.4.11-MariaDB
+-- PHP Version: 7.3.16
+
+SET SQL_MODE = "NO_AUTO_VALUE_ON_ZERO";
+START TRANSACTION;
+SET time_zone = "+00:00";
+
+
+/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
+/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
+/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
+/*!40101 SET NAMES utf8mb4 */;
+
+--
+-- Database: `pms`
+--
+
+-- --------------------------------------------------------
+
+--
+-- Table structure for table `schemes`
+--
+
+CREATE TABLE `schemes` (
+  `id` int(11) NOT NULL,
+  `client_id` varchar(20) DEFAULT NULL,
+  `schemename` varchar(100) DEFAULT NULL,
+  `created_at` timestamp NULL DEFAULT NULL,
+  `updated_at` timestamp NULL DEFAULT NULL,
+  `deleted_at` timestamp NULL DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
+
+--
+-- Dumping data for table `schemes`
+--
+
+INSERT INTO `schemes` (`id`, `client_id`, `schemename`, `created_at`, `updated_at`, `deleted_at`) VALUES
+(1, '1', 'santosh2', '2020-05-14 05:49:09', '2020-05-14 05:49:09', NULL),
+(2, '1', 'santosh', '2020-05-14 05:57:50', '2020-05-14 05:57:50', NULL),
+(3, '1', 'santosh1', '2020-05-14 05:59:06', '2020-05-14 06:27:35', NULL),
+(4, '20', 'myscheme1', '2020-05-14 06:29:23', '2020-05-14 06:29:23', NULL),
+(5, '20', 'myscheme2', '2020-05-14 06:29:45', '2020-05-14 06:29:45', NULL);
+
+--
+-- Indexes for dumped tables
+--
+
+--
+-- Indexes for table `schemes`
+--
+ALTER TABLE `schemes`
+  ADD PRIMARY KEY (`id`);
+
+--
+-- AUTO_INCREMENT for dumped tables
+--
+
+--
+-- AUTO_INCREMENT for table `schemes`
+--
+ALTER TABLE `schemes`
+  MODIFY `id` int(11) NOT NULL AUTO_INCREMENT, AUTO_INCREMENT=6;
+COMMIT;
+
+/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
+/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
+/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
